# semantic-model-toolkit

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: lint.yaml  release.yaml  test.yaml
examples/: config.yaml  simple_example.py
src/semantic_model_toolkit/: __init__.py  generate_model.py
src/semantic_model_toolkit/core/: __init__.py  config.py  model_generator.py
src/semantic_model_toolkit/data_processing/: cte_utils.py  cte_utils_test.py  proto_utils.py
src/semantic_model_toolkit/llm_utils/: __init__.py  llm_client.py
src/semantic_model_toolkit/protos/: semantic_model.proto  semantic_model_pb2.py  semantic_model_pb2.pyi
src/semantic_model_toolkit/snowflake_utils/: snowflake_connector.py  utils.py
src/semantic_model_toolkit/tests/: config_test.py  core_test.py  cte_utils_test.py  generate_model_test.py  snowflake_connector_test.py  utils_test.py  validate_model_test.py  yaml_to_semantic_model_test.py
src/semantic_model_toolkit/tests/samples/: validate_yamls.py
src/semantic_model_toolkit/validate/: context_length.py  schema.py
